fix layout for categories list on home page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,3 +18,10 @@ nav {
   height: 18vw;
   object-fit: cover;
 }
+
+.categories-list {
+  img {
+    min-height: 140px;
+    max-height: 300px;
+  }
+}
