--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,23 +1,23 @@
 {{#> app}}
   {{#*inline "content"}}
-    <div class="row">
-      <div class="col-md-6 col-lg-4 mb-2">
-        <img src="/img/IMG_8486.JPG" class="img-fluid rounded">
+    <div class="row categories-list">
+      <div class="col-md-6 col-lg-4 mb-3 mb-sm-4">
+        <img src="/img/IMG_8486.JPG" class="card-img-top img-card rounded">
       </div>
-      <div class="col-md-6 col-lg-4 mb-2">
-        <img src="/img/IMG_8488.JPG" class="img-fluid rounded">
+      <div class="col-md-6 col-lg-4 mb-3 mb-sm-4">
+        <img src="/img/IMG_8488.JPG" class="card-img-top img-card rounded">
       </div>
-      <div class="col-md-6 col-lg-4 mb-2">
-        <img src="/img/IMG_8490.JPG" class="img-fluid rounded">
+      <div class="col-md-6 col-lg-4 mb-3 mb-sm-4">
+        <img src="/img/IMG_8490.JPG" class="card-img-top img-card rounded">
       </div>
-      <div class="col-md-6 col-lg-4 mb-2">
-        <img src="/img/meat.JPG" class="img-fluid rounded">
+      <div class="col-md-6 col-lg-4 mb-3 mb-sm-4">
+        <img src="/img/meat.JPG" class="card-img-top img-card rounded">
       </div>
-      <div class="col-md-6 col-lg-4 mb-2">
-        <img src="/img/fish.JPG" class="img-fluid rounded">
+      <div class="col-md-6 col-lg-4 mb-3 mb-sm-4">
+        <img src="/img/fish.JPG" class="card-img-top img-card rounded">
       </div>
-      <div class="col-md-6 col-lg-4 mb-2">
-        <img src="/img/cereals.JPG" class="img-fluid rounded">
+      <div class="col-md-6 col-lg-4 mb-3 mb-sm-4">
+        <img src="/img/cereals.JPG" class="card-img-top img-card rounded">
       </div>
     </div>
   {{/inline}}
