--- a/views/admin/products/index.hbs
+++ b/views/admin/products/index.hbs
@@ -24,7 +24,10 @@
               <div class="mb-3 row">
                 <label class="col-lg-2 col-md-6 col-sm-12 col-form-label">Ціна:</label>
                 <div class="col-lg-10 col-md-6 col-sm-12">
-                  <input name="price" type="number" class="form-control" required>
+                  <div class="input-group">
+                    <input name="price" type="text" class="form-control" required>
+                    <span class="input-group-text">грн.</span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -44,7 +47,7 @@
           </div>
           <div class="mb-3">
             <label class="form-label">Опис</label>
-            <textarea class="form-control" name="description" rows="3" required></textarea>
+            <textarea class="form-control" name="description" rows="10" required></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Зберегти</button>
         </form>
