--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -25,6 +25,9 @@
           <div class="vr bg-white mx-2 d-none d-lg-block"></div>
           {{#if session.user}}
           <a class="nav-link active" href="/account/orders">Мої замовлення</a>
+            {{#ifCond session.user.role 'admin'}}
+            <a class="nav-link active" href="/admin">Адмін</a>
+            {{/ifCond}}
           <a class="nav-link active" href="/auth/logout">Вихід ({{session.user.name}})</a>
           {{else}}
           <a class="nav-link active" href="/auth/login">Увійти</a>
