update navigation links in admin panel

--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -2,10 +2,10 @@
   {{#*inline "content"}}
     <div class="card">
       <div class="card-header">
-        Admin Panel - Home Page
+        Адмін панель - Головна сторінка
       </div>
       <div class="card-body">
-        Welcome to the Admin Panel, use the sidebar to navigate between the different options.
+        Ласкаво просимо до панелі адміністратора. Використовуйте бічну панель для навігації між різними опціями.
       </div>
     </div>
   {{/inline}}
