--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -8,7 +8,7 @@
     crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link href="/css/admin.css" rel="stylesheet" />
-  <title>{{#if viewData.title}}{{ viewData.title }}{{else}}Admin - Online Store{{/if}}</title>
+  <title>{{#if viewData.title}}{{ viewData.title }}{{else}}Адмін панель - Soft Market{{/if}}</title>
 </head>
 
 <body>
@@ -16,22 +16,22 @@
     <!-- sidebar -->
     <div class="p-3 col fixed text-white bg-dark">
       <a href="/admin" class="text-white text-decoration-none">
-        <span class="fs-4">Aдмін Панель</span>
+        <span class="fs-4">Aдмін панель</span>
       </a>
       <hr />
       <ul class="nav flex-column">
-        <li><a href="/admin" class="nav-link text-white">Користувачі</a></li>
-        <li><a href="/admin/products" class="nav-link text-white">Замовлення</a></li>
         <li><a href="/admin/products" class="nav-link text-white">Продукти</a></li>
+        <li><a href="/admin/orders" class="nav-link text-white">Замовлення</a></li>
+        <li><a href="/admin/users" class="nav-link text-white">Користувачі</a></li>
         <li>
-          <a href="/" class="mt-2 btn bg-primary text-white">Назад до головної сторінки</a>
+          <a href="/" class="mt-2 btn bg-primary text-white">Назад до Soft Market</a>
         </li>
       </ul>
     </div>
     <!-- sidebar -->
     <div class="col content-grey">
       <nav class="p-3 shadow text-end">
-        <span class="profile-font">Admin</span>
+        <span class="profile-font">Адмін</span>
         <img class="img-profile rounded-circle" src="/img/undraw_profile.svg">
       </nav>
 
