--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -21,6 +21,7 @@
       <hr />
       <ul class="nav flex-column">
         <li><a href="/admin/products" class="nav-link text-white">Продукти</a></li>
+        <li><a href="/admin/categories" class="nav-link text-white">Категорії</a></li>
         <li><a href="/admin/orders" class="nav-link text-white">Замовлення</a></li>
         <li><a href="/admin/users" class="nav-link text-white">Користувачі</a></li>
         <li>
