--- a/views/admin/products/index.hbs
+++ b/views/admin/products/index.hbs
@@ -42,7 +42,17 @@
               </div>
             </div>
             <div class="col">
-              &nbsp;
+              <div class="mb-3 row">
+                <label class="col-lg-2 col-md-6 col-sm-12 col-form-label">Категорія:</label>
+                <div class="col-lg-10 col-md-6 col-sm-12">
+                  <select class="form-control form-select" name="category" aria-label="Виберіть категорію продукту">
+                    <option value="" selected>Виберіть категорію продукту</option>
+                    {{#each @root.viewData.categories}}
+                      <option value="{{getId}}">{{getName}}</option>
+                    {{/each}}
+                  </select>
+                </div>
+              </div>
             </div>
           </div>
           <div class="mb-3">
