--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
           <a class="nav-link active" href="/">Головна</a>
-          <a class="nav-link active" href="/products">Продукти</a>
+          <a class="nav-link active" href="/categories">Продукти</a>
           <a class="nav-link active" href="/cart">Корзина</a>
           <a class="nav-link active" href="/about">Про нас</a>
           <div class="vr bg-white mx-2 d-none d-lg-block"></div>
