--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,10 +4,12 @@
       {{#each viewData.categories}}
       <div class="category-item col-md-6 col-lg-4 mb-3 mb-sm-4">
         <div class="card">
-          <img src="/uploads/{{getImage}}" class="card-img-top img-card">
-          <h2 class="category-title text-center text-white w-100">
-            {{getName}}
-          </h2>
+           <a href="/categories/{{getId}}">
+            <img src="/uploads/{{getImage}}" class="card-img-top img-card">
+           </a>
+           <a href="/categories/{{getId}}">
+            <h2 class="category-title text-center text-white w-100">{{getName}}</h2>
+           </a>
         </div>
       </div>
       {{/each}}
