--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link href="/css/app.css" rel="stylesheet" />
   <title>{{#if viewData.title}}{{ viewData.title }}{{else}}Soft Market{{/if}}</title>
 </head>
@@ -20,7 +21,7 @@
         <div class="navbar-nav ms-auto">
           <a class="nav-link active" href="/">Головна</a>
           <a class="nav-link active" href="/categories">Продукти</a>
-          <a class="nav-link active" href="/cart">Корзина</a>
+          <a class="nav-link active" href="/cart">Кошик</a>
           <a class="nav-link active" href="/about">Про нас</a>
           <div class="vr bg-white mx-2 d-none d-lg-block"></div>
           {{#if session.user}}
