--- a/views/products/show.hbs
+++ b/views/products/show.hbs
@@ -1,18 +1,23 @@
 {{#> app}}
   {{#*inline "content"}}
     {{#with viewData.product}}
-    <div class="card mb-3">
+    <div class="product-info card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
           <img src="/uploads/{{getImage}}" class="img-fluid rounded-start">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">
-              {{getName}} ({{getPrice}} грн.)
-            </h5>
+            <h4 class="card-title">
+              {{getName}}
+            </h4>
             <p class="card-text">{{{formatLineBreaks description}}}</p>
-            <p class="card-text">
+            <div class="product-info__buy">
+              <div class="product-price">
+                <span class="product-price__value">{{getPrice}}</span>
+                <span class="product-price__currency">грн</span>
+              </div>
+
               <form method="POST" action="/cart/add/{{getId}}">
                 <div class="row">
                   <div class="col-auto">
@@ -22,11 +27,11 @@
                     </div>
                   </div>
                   <div class="col-auto">
-                    <button class="btn bg-primary text-white" type="submit">Додати в корзину</button>
+                    <button class="buy-btn btn bg-primary text-white" type="submit"><i class="bi bi-cart"></i>У кошик</button>
                   </div>
                 </div>
               </form>
-            </p>
+            </div>
           </div>
         </div>
       </div>
