--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,12 +2,12 @@
   {{#*inline "content"}}
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 ms-auto">
+        {{!-- <div class="col-lg-4 ms-auto">
           <p class="lead">{{ viewData.description }}</p>
         </div>
         <div class="col-lg-4 me-auto">
           <p class="lead">{{ viewData.author }}</p>
-        </div>
+        </div> --}}
       </div>
     </div>
   {{/inline}}
