--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -10,9 +10,12 @@
 </head>
 <body>
   <!-- header -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary py-4">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary py-4 fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="/">Soft Market</a>
+      <a class="navbar-brand" href="/">
+        <span class="part1">SOFT</span>
+        <span class="part2">MARKET</span>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,19 +24,51 @@
         <div class="navbar-nav ms-auto">
           <a class="nav-link active" href="/">Головна</a>
           <a class="nav-link active" href="/categories">Продукти</a>
-          <a class="nav-link active" href="/cart">Кошик</a>
           <a class="nav-link active" href="/about">Про нас</a>
           <div class="vr bg-white mx-2 d-none d-lg-block"></div>
           {{#if session.user}}
-          <a class="nav-link active" href="/account/orders">Мої замовлення</a>
-            {{#ifCond session.user.role 'admin'}}
-            <a class="nav-link active" href="/admin/products">Адмін панель</a>
-            {{/ifCond}}
-          <a class="nav-link active" href="/auth/logout">Вихід ({{session.user.name}})</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link active icon-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="icon bi bi-person"></i>
+              {{!-- {{session.user.name}} --}}
+              Мій кабінет
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdown01" style="min-width: 280px;">
+              <li>
+                <a class="dropdown-item d-flex gap-2 align-items-center" href="/account/orders">
+                  <i class="icon bi bi-bag"></i>
+                  Мої замовлення
+                </a>
+              </li>
+              {{#ifCond session.user.role 'admin'}}
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                  <a class="dropdown-item d-flex gap-2 align-items-center" href="/admin/products">
+                    <i class="icon bi bi-speedometer2"></i>
+                    Адмін панель
+                  </a>
+                </li>
+              {{/ifCond}}
+              <li><hr class="dropdown-divider"></li>
+              <li>
+                <a class="dropdown-item d-flex gap-2 align-items-center" href="/auth/logout">
+                  <i class="icon bi bi-box-arrow-right"></i>
+                  Вихід
+                </a>
+              </li>
+            </ul>
+          </li>
           {{else}}
-          <a class="nav-link active" href="/auth/login">Увійти</a>
-          <a class="nav-link active" href="/auth/register">Зареєструватись</a>
+          <a class="nav-link icon-link active" href="/auth/login">
+            <i class="icon bi bi-person"></i>
+            Увійти
+          </a>
+          {{!-- <a class="nav-link active" href="/auth/register">Зареєструватись</a> --}}
           {{/if}}
+          <div class="vr bg-white mx-2 d-none d-lg-block"></div>
+          <a class="nav-link icon-link active" href="/cart">
+            <i class="icon bi-cart"></i>
+          </a>
         </div>
       </div>
     </div>
