--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,9 +6,9 @@
         <div class="card">
            <a href="/categories/{{getId}}">
             <img src="/uploads/{{getImage}}" class="card-img-top img-card">
-           </a>
-           <a href="/categories/{{getId}}">
-            <h2 class="category-title text-center text-white w-100">{{getName}}</h2>
+            <div class="title-container w-100">
+              <h4 class="title text-center text-white">{{getName}}</h4>
+            </div>
            </a>
         </div>
       </div>
