--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -74,9 +74,9 @@
     </div>
   </nav>
 
-  <header class="masthead bg-primary text-white text-center py-4">
-    <div class="container d-flex align-items-center flex-column">
-      <h2>{{#if viewData.subtitle}}{{ viewData.subtitle }}{{else}}Категорії продуктів{{/if}}</h2>
+  <header class="masthead text-center">
+    <div class="container">
+      {{#if viewData.subtitle}}<h2 style="padding-top: 32px;">{{ viewData.subtitle }}</h2>{{/if}}</h2>
     </div>
   </header>
   <!-- header -->
