--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -2,37 +2,29 @@
   {{#*inline "content"}}
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-8">
+      <div class="col-md-6">
         <div class="card">
-          <div class="card-header">Увійти</div>
-          <div class="card-body">
+          <h2 class="text-center pt-4">Вхід</h2>
+          <div class="card-body py-5 px-5 pt-4">
             {{#if flashErrors}}
               {{#each flashErrors}}
                 <p class="alert alert-danger">{{this}}</p>
               {{/each}}
             {{/if}}
             <form method="POST" action="/auth/connect">
-              <div class="form-group row pb-2">
-                <label for="email" class="col-md-4 col-form-label text-md-right">Імейл</label>
-                <div class="col-md-6">
-                  <input id="email" type="email" class="form-control" name="email"/>
-                </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Ел. пошта</label>
+                <input id="email" type="email" class="form-control" name="email"/>
               </div>
 
-              <div class="form-group row pb-2">
-                <label for="password" class="col-md-4 col-form-label text-md-right">Пароль</label>
-                <div class="col-md-6">
-                  <input id="password" type="password" class="form-control" name="password"/>
-                </div>
+              <div class="mb-4">
+                <label for="password" class="form-label">Пароль</label>
+                <input id="password" type="password" class="form-control" name="password"/>
               </div>
 
-              <div class="form-group row mb-0">
-                <div class="col-md-8 offset-md-4">
-                  <button type="submit" class="btn bg-primary text-white">
-                    Увійти
-                  </button>
-                </div>
-              </div>
+              <button type="submit" class="auth-btn btn bg-primary text-white">
+                Увійти
+              </button>
             </form>
           </div>
         </div>
