--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -2,43 +2,32 @@
   {{#*inline "content"}}
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-md-6">
           <div class="card">
-            <div class="card-header">Зареєструватись</div>
-
-            <div class="card-body">
+            <h2 class="text-center pt-4">Реєстрація</h2>
+            <div class="card-body py-5 px-5 pt-4">
               {{#if flashErrors}}
                 {{#each flashErrors}}
                   <p class="alert alert-danger">{{this}}</p>
                 {{/each}}
               {{/if}}
               <form method="POST" action="/auth/store">
-                <div class="form-group row">
-                  <label for="name" class="col-md-4 col-form-label text-md-right">Ім'я</label>
-                  <div class="col-md-6 pb-2">
-                    <input id="name" type="text" class="form-control" name="name" required />
-                  </div>
+                <div class="mb-3">
+                  <label for="name" class="form-label">Ім'я</label>
+                  <input id="name" type="text" class="form-control" name="name"/>
                 </div>
 
-                <div class="form-group row">
-                  <label for="email" class="col-md-4 col-form-label text-md-right">Імейл</label>
-                  <div class="col-md-6 pb-2">
-                    <input id="email" type="email" class="form-control" name="email" required />
-                  </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Імейл</label>
+                  <input id="email" type="email" class="form-control" name="email" />
                 </div>
 
-                <div class="form-group row">
-                  <label for="password" class="col-md-4 col-form-label text-md-right">Пароль</label>
-                  <div class="col-md-6 pb-2">
-                    <input id="password" type="password" class="form-control" name="password" required />
-                  </div>
+                <div class="mb-4">
+                  <label for="password" class="form-label">Пароль</label>
+                  <input id="password" type="password" class="form-control" name="password" />
                 </div>
 
-                <div class="form-group row mb-0">
-                  <div class="col-md-6 offset-md-4">
-                    <button type="submit" class="btn bg-primary text-white">Зареєструватись</button>
-                  </div>
-                </div>
+                <button type="submit" class="auth-btn btn bg-primary text-white">Створити аккаунт</button>
               </form>
             </div>
           </div>
