--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -87,7 +87,12 @@
           {{/if}}
           <div class="vr bg-white mx-2 d-none d-lg-block"></div>
           <a class="nav-link icon-link active" href="/cart">
-            <i class="icon bi-cart"></i>
+            <span class="cart-container position-relative">
+              <i class="icon bi-cart"></i>
+              <span id="cart-count" class="cart-count position-absolute badge rounded-pill {{#unless session.products}}hidden{{/unless}}">
+                {{cartCount session.products}}
+              </span>
+            </span>
           </a>
         </div>
       </div>
@@ -124,7 +129,7 @@
     </div>
   </div> --}}
   <!-- footer -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous">
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
