--- a/public/css/app.css
+++ b/public/css/app.css
@@ -202,6 +202,13 @@ body {
   font-size: 24px;
 }
 
+.product-price {
+  display: flex;
+  align-items: baseline;
+  gap: 4px;
+  flex-wrap: nowrap;
+}
+
 .product-price__value {
   font-weight: bold;
   font-size: 22px;
@@ -299,4 +306,59 @@ body {
 
 .hidden {
   display: none;
+}
+
+.cart .card-body {
+  padding: 1.5rem;
+}
+
+.cart-item a {
+  color: inherit;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.cart .product-img {
+  height: 90px;
+  width: 100%;
+  object-fit: contain;
+}
+
+.cart .delete-btn {
+  border-radius: 50%;
+  font-size: 18px;
+}
+
+.cart .delete-btn:focus {
+  box-shadow: none;
+}
+
+.cart .clean-cart-btn {
+  text-decoration: none;
+}
+
+.cart .clean-cart-btn:hover {
+  background-color: transparent;
+  color: #dc3545;
+}
+
+.cart .clean-cart-btn:focus {
+  box-shadow: none;
+}
+
+.cart .total-price-label {
+  font-size: 18px;
+}
+
+.cart .purchase-btn {
+  width: 100%;
+  height: 48px;
+  text-align: center;
+  font-size: 17px;
+  border-radius: 24px;
+  line-height: 1.8;
+}
+
+.cart .purchase-btn:focus {
+  box-shadow: none;
 }
