--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -18,7 +18,7 @@
                 </div>
 
                 <div class="mb-3">
-                  <label for="email" class="form-label">Імейл</label>
+                  <label for="email" class="form-label">Ел. пошта</label>
                   <input id="email" type="email" class="form-control" name="email" />
                 </div>
 
