--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link href="/css/admin.css" rel="stylesheet" />
   <title>{{#if viewData.title}}{{ viewData.title }}{{else}}Адмін панель - Soft Market{{/if}}</title>
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
