--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
   <link href="/css/app.css" rel="stylesheet" />
   <title>{{#if viewData.title}}{{ viewData.title }}{{else}}Soft Market{{/if}}</title>
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <!-- header -->
