--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="row g-0">
+  <div class="content row g-0">
     <!-- sidebar -->
     <div class="p-3 col fixed text-white bg-dark">
       <a href="/admin" class="text-white text-decoration-none">
